--- a/_posts/2020-06-28-lurker.md
+++ b/_posts/2020-06-28-lurker.md
@@ -3,7 +3,7 @@ layout: post
 title:  "lurker"
 date:   2020-06-28 19:33:37 +0200
 categories: project
-image: ''
+image: '490x420.png'
 website: ''
 source: ''
 ---
