--- a/_posts/2020-06-28-lurker.md
+++ b/_posts/2020-06-28-lurker.md
@@ -8,4 +8,7 @@ website: ''
 source: ''
 ---
 
-Lurker is an alternative interface for Twitter.
+[[Source code]](https://github.com/emilosman/lurker)
+
+Lurker is an alternative interface for Twitter.  
+Follow accounts and save Tweets anonymously.
