--- a/_posts/2020-06-28-lurker.md
+++ b/_posts/2020-06-28-lurker.md
@@ -4,6 +4,7 @@ title:  "lurker"
 date:   2020-06-28 19:33:37 +0200
 categories: project
 image: 'lurker.jpg'
+video: 'lurker.mp4'
 website: ''
 source: ''
 ---
