--- a/_posts/2020-06-28-lurker.md
+++ b/_posts/2020-06-28-lurker.md
@@ -7,6 +7,7 @@ image: 'lurker.jpg'
 video: 'lurker.mp4'
 website: ''
 source: ''
+permalink: /lurker/
 ---
 
 [[Source code]](https://github.com/emilosman/lurker)
