--- a/_posts/2020-06-28-lurker.md
+++ b/_posts/2020-06-28-lurker.md
@@ -6,6 +6,7 @@ categories: project
 image: 'lurker.jpg'
 video: 'lurker.mp4'
 permalink: /lurker/
+description: 'Lurker is an alternative interface for Twitter. Follow accounts and save Tweets anonymously.'
 ---
 
 [[Website]](https://lurkerapp.herokuapp.com/)
