--- a/_posts/2020-06-28-lurker.md
+++ b/_posts/2020-06-28-lurker.md
@@ -3,7 +3,7 @@ layout: post
 title:  "lurker"
 date:   2020-06-28 19:33:37 +0200
 categories: project
-image: 'lurker.jpg'
+image: 'assets/images/lurker.jpg'
 video: 'lurker.mp4'
 permalink: /lurker/
 description: 'Lurker is an alternative interface for Twitter. Follow accounts and save Tweets anonymously.'
