--- a/_posts/2020-06-28-lurker.md
+++ b/_posts/2020-06-28-lurker.md
@@ -13,4 +13,5 @@ description: 'Lurker is an alternative interface for Twitter. Follow accounts an
 [Source code](https://github.com/emilosman/lurker)
 
 Lurker is an alternative interface for Twitter.  
-Follow accounts and save Tweets anonymously.
+Follow accounts and save Tweets anonymously.  
+Made with Ruby on Rails.
