add lurker text

--- a/_posts/2020-06-28-lurker.md
+++ b/_posts/2020-06-28-lurker.md
@@ -13,5 +13,10 @@ description: 'Lurker is an alternative interface for Twitter. Follow accounts an
 [Source code](https://github.com/emilosman/lurker)
 
 Lurker is an alternative interface for Twitter.  
-Follow accounts and save Tweets anonymously.  
+
+Read Twitter accounts chronologically, with an 'unread' tweet counter. There are interesting people on Twitter, but reading the main timeline is maddening, because everything is thrown together by an algorithm. That's what makes it stressful and addictive.
+This sorts things out, read only what you find interesting.
+
+You can follow accounts and save Tweets anonymously.
+
 Made with Ruby on Rails.
